# micro-bitcoin

./: Cargo.toml  README.md
src/: main.rs
src/consensus/: verify.rs
src/state/: utxo.rs
src/tx/: types.rs
src/wallet/: key.rs  mod.rs  sign.rs
