[package]
name = "microbtc"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = { version = "0.31", features = ["rand", "serde"] }
rand = "0.9"
sha2 = "0.10"
ripemd = "0.1"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.1"
